# worddictlib

./: CMakeLists.txt  WordDictLib.kdev4  define.h  main.cpp  pymain.cpp  python_output.cpp  test.cpp
.kdev4/: WordDictLib.kdev4
