cmake_minimum_required(VERSION 2.8)
project(worddictlib CXX)
ADD_DEFINITIONS(-std=c++11)
include_directories("/usr/include/python2.7")
SET(SRC_LIST main.cpp)
ADD_LIBRARY (worddict SHARED ${SRC_LIST} python_output.cpp)
ADD_LIBRARY (worddict2 SHARED pymain.cpp)
set_target_properties(worddict PROPERTIES PREFIX "")
set_target_properties(worddict2 PROPERTIES PREFIX "")
add_executable(worddicttest ${SRC_LIST} test.cpp)
TARGET_LINK_LIBRARIES (worddict boost_python db)
TARGET_LINK_LIBRARIES (worddicttest db)
